Task2/modules/network-module.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Network Module - Creates Internet Gateway, NAT Gateway, and Route Tables'

Parameters:
  VpcId:
    Type: String
    Description: ID of the VPC
  PublicSubnetId:
    Type: String
    Description: ID of the Public Subnet
  PrivateSubnetId:
    Type: String
    Description: ID of the Private Subnet

Resources:
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: my-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VpcId
      InternetGatewayId: !Ref InternetGateway

  NatEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: nat-eip

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnetId
      AllocationId: !GetAtt NatEIP.AllocationId
      Tags:
        - Key: Name
          Value: my-natgw

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetId
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: private-rt

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetId
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  InternetGatewayId:
    Description: ID of the Internet Gateway
    Value: !Ref InternetGateway
  NatGatewayId:
    Description: ID of the NAT Gateway
    Value: !Ref NatGateway
  PublicRouteTableId:
    Description: ID of the public route table
    Value: !Ref PublicRouteTable
  PrivateRouteTableId:
    Description: ID of the private route table
    Value: !Ref PrivateRouteTable
